[package]
name = "kvdb-lib"
version = "0.1.1"
authors = ["messenger_qs 139318962+messengernew@users.noreply.github.com"]
edition = "2021"
description = "A simple thread-safe key-value storage library using DashMap."
license = "MIT"
repository = "https://github.com/messenger_qs/kvdb-lib"
readme = "README.md"
homepage = "https://github.com/messenger_qs/kvdb-lib"

[dependencies]
dashmap = "6.0.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3